# cockamps-tape-delay

./: AGENTS.md  CMakeLists.txt  README.md  build-linux.sh
.github/workflows/: build.yml
Source/: BBDDelay.cpp  BBDDelay.h  PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h  TapeDelay.cpp  TapeDelay.h
